# crisis-core-fusion-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  crisis-core-fusion.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  config.lua  crisis-core-fusion.rockspec  crisis-core-fusion_sdk.lua  crisis-core-fusion_types.lua  features.lua
php/: AGENTS.md  (+7 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  crisiscorefusion_sdk.py  crisiscorefusion_types.py  features.py  pyproject.toml
py/core/: context.py  response.py  result.py
py/entity/: fusion_entity.py  materia_entity.py  system_entity.py
py/feature/: debug_feature.py  idempotency_feature.py  metrics_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_fusion_entity.py  test_materia_direct.py  test_materia_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_system_direct.py  test_system_entity.py
py/utility/: done.py  feature_add.py  feature_hook.py  feature_init.py  fetcher.py  make_error.py  make_point.py  make_response.py  make_result.py  make_spec.py  prepare_auth.py  prepare_headers.py  prepare_method.py  prepare_query.py  result_body.py  transform_request.py  transform_response.py
(+447 files in other folders)
